manifests/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: database
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-pvc
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc
