manifests/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
